--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url("styles/contato.css");
 @import url("styles/rodape.css");
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:wght@400;600&family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@400;700&family=Krona+One&family=Montserrat:wght@400;600&family=Poppins:wght@300;400;500;700&display=swap');
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -12,7 +13,9 @@
     --laranja: #eb9b00;
     --azul: #002F52;
     --azul-degrade: linear-gradient(160deg, #002F52 0%, #326589 100%);
+    --preto: #000000;
     --fonte-principal: "Poppins";
+    --fonte-secundaria: "Josefin Sans";
 }
 
 body {
