Adaptacao header, carrossel e tópicos para tablet

--- a/styles/header.css
+++ b/styles/header.css
@@ -103,4 +103,17 @@
     .cabecalho__menu-hamburguer {
         display: none;
     }
+
+    .opcoes__botao {
+        display: none;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+    }
+
+    .lista-menu {
+        width: auto;
+    }
+
 }
