--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -29,3 +29,17 @@
     text-decoration: none;
     padding: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+    .topicos__titulo {
+        font-size: 24px;
+    }
+    
+    .topicos__link {
+        font-size: 24px;
+    }
+
+    .topicos__item {
+        margin: 2.5em 1em;
+    }
+}
