--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     --azul: #002F52;
     --azul-degrade: linear-gradient(160deg, #002F52 0%, #326589 100%);
     --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
     --fonte-principal: "Poppins";
     --fonte-secundaria: "Josefin Sans";
 }
