--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -7,3 +7,39 @@ hr {
     padding: 1em;
 }
 
+.lista-rodape {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .rodape {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .lista-rodape {
+        display: block;
+    }
+
+    .lista-rodape__titulo {
+        color: var(--cinza-claro);
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+
+    .lista-rodape__item {
+        display: flex;
+        align-items: center;
+        margin: 1em 0 0 0;
+    }
+
+    .lista-rodape__link {
+        text-decoration: none;
+        color: var(--cinza);
+        margin-left: 0.5em;
+    }
+
+    .rodape__titulo {
+        font-size: 24px;
+    }
+}
