--- a/styles/banner.css
+++ b/styles/banner.css
@@ -31,7 +31,7 @@
     color: var(--branco);
     text-align: center;
     background: url("../assets/Pesquisa.svg") no-repeat;
-    background-position: 0.5em;
+    background-position: calc(50% - 9em);
 }
 
 @media screen and (min-width: 1024px) {
@@ -43,7 +43,9 @@
         width: 50%;
     }
 
-    .banner__pesquisa::placeholder {
+
+    /* Alterado para o "background-position: calc(50% - 9em)" na classe mobile*/
+    /* .banner__pesquisa::placeholder {
         background-position: 5.5em;
-    }
+    } */
 }
