--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -103,3 +103,35 @@
         margin: 2em auto 1em;
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .carrossel__container {
+        display: flex;
+        margin: 0 12.5vw 3em 12.5vw;
+        /* padding: 0 2em; */
+        align-items: center;
+        /* justify-content: space-between; */
+    }
+
+    .swiper-pagination {
+        margin: 0.5em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .descricao__titulo {
+        font-size: 32px;
+    }
+
+    .descricao__texto {
+        font-size: 16px;
+        margin-right: 1em;
+    }
+
+    .card {
+        width: 65%;
+        margin-left: 3em;
+    }
+}
