--- a/styles/contato.css
+++ b/styles/contato.css
@@ -58,3 +58,13 @@
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .contato {
+        padding: 2em 10vw;
+    }
+
+    .contato__descricao {
+        margin-right: 2.5em;
+    }
+}
