--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -43,3 +43,9 @@
         margin: 2.5em 1em;
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .topicos {
+        padding: 4em 20vw;
+    }
+}
