--- a/styles/header.css
+++ b/styles/header.css
@@ -15,6 +15,14 @@
     display: inline-block;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburguer {
+    background-image: url(../assets/Menu\ Aberto.svg);
+}
+
+.container__botao:checked ~ .container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -106,10 +114,32 @@
         color: var(--branco);
     }
 
+    .opcoes__item:hover > .opcoes__link {
+        -webkit-text-fill-color: var(--branco);
+    }
+
     /* .lista-menu {
         width: auto;
     } */
 
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .lista-menu__item:hover > .lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
+    .opcoes__item {
+        padding: 2em 1em;
+    }
 }
 
 @media screen and (min-width: 1440px) {
