--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -53,4 +53,12 @@ hr {
         border-left: 1px solid var(--cinza-claro);
         padding-left: 1em;
     }
+
+    .lista-rodape__item:hover {
+        text-decoration: underline var(--cinza-claro);
+    }
+
+    .lista-rodape__link:hover {
+        color: var(--laranja);
+    }
 }
