--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -19,6 +19,7 @@
 
 .topicos__item {
     margin: 1.5em 0.5em;
+    transition: 250ms;
 }
 
 .topicos__link {
@@ -47,5 +48,17 @@
 @media screen and (min-width: 1440px) {
     .topicos {
         padding: 4em 20vw;
+    }
+
+    .topicos__item:hover {
+        transform: scale(1.1);
+        transition: 250ms;
+
+    }
+
+    .topicos__link:hover {
+        color: var(--laranja);
+        background-color: var(--branco);
+        border: 2px solid var(--laranja);
     }
 }
