Alteração na formatação

--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -12,7 +12,7 @@
     width: 100%;
 }
 
-.swiper-button-next, 
+.swiper-button-next,
 .swiper-button-prev {
     display: none;
     --swiper-navigation-size: 0.9em;
@@ -95,7 +95,8 @@
         width: 60%;
     }
 
-    .swiper-button-prev, .swiper-button-next {
+    .swiper-button-prev,
+    .swiper-button-next {
         display: block;
     }
 
