--- a/styles/header.css
+++ b/styles/header.css
@@ -67,6 +67,7 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 @media screen and (min-width: 1024px) {
